--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ jsonschema==4.9.0
 marshmallow==3.17.0
 oauthlib==3.2.0
 packaging==21.3
+Pillow==9.2.0
 psycopg2==2.9.3
 pycparser==2.21
 PyJWT==2.4.0
