--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==22.1.0
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.0
+commonmark==0.9.1
 cryptography==37.0.4
 defusedxml==0.7.1
 dj-database-url==1.0.0
@@ -12,28 +13,36 @@ Django==4.0.6
 django-allauth==0.51.0
 django-cache-url==3.4.2
 django-cors-headers==3.13.0
+django-crispy-forms==1.14.0
+django-filter==22.1
 djangorestframework==3.13.1
 drf-spectacular==0.23.1
 environs==9.5.0
 gunicorn==20.1.0
+httpie==3.2.1
 idna==3.3
 inflection==0.5.1
 jsonschema==4.9.0
 marshmallow==3.17.0
+multidict==6.0.2
 oauthlib==3.2.0
 packaging==21.3
 Pillow==9.2.0
 psycopg2==2.9.3
 pycparser==2.21
+Pygments==2.12.0
 PyJWT==2.4.0
 pyparsing==3.0.9
 pyrsistent==0.18.1
+PySocks==1.7.1
 python-dotenv==0.20.0
 python3-openid==3.2.0
 pytz==2022.1
 PyYAML==6.0
 requests==2.28.1
 requests-oauthlib==1.3.1
+requests-toolbelt==0.9.1
+rich==12.5.1
 sqlparse==0.4.2
 uritemplate==4.1.1
 urllib3==1.26.11
