--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,14 @@ attrs==22.1.0
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.0
+colorama==0.4.5
 commonmark==0.9.1
 cryptography==37.0.4
 defusedxml==0.7.1
 dj-database-url==1.0.0
 dj-email-url==1.0.5
 dj-rest-auth==2.2.5
-Django==4.0.6
+Django==4.1.1
 django-allauth==0.51.0
 django-cache-url==3.4.2
 django-cors-headers==3.13.0
@@ -44,6 +45,7 @@ requests-oauthlib==1.3.1
 requests-toolbelt==0.9.1
 rich==12.5.1
 sqlparse==0.4.2
+tzdata==2022.2
 uritemplate==4.1.1
 urllib3==1.26.11
 whitenoise==6.2.0
